[package]
name = "server"
version = "0.0.0"
edition = "2018"
default-run = "main"

[dependencies]
env_logger = "0.8.4"
log = { version = "0.4.14", features = ["max_level_debug", "release_max_level_warn"]}
serde = {version = "1.0.126", features = ["derive"] }
serde_json = "1.0"



[dependencies.funs]
path = "../funs"

[dependencies.inger]
path = "../libinger"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "q"
path = "src/q.rs"
