[package]
name = "server"
version = "0.0.0"
edition = "2018"
default-run = "main"

[dependencies.env_logger]
version = "0.8.4"

[dependencies.log]
version = "0.4.14"
features = ["max_level_debug", "release_max_level_warn"]

[dependencies.serde_json]
version = "1.0"

[dependencies.funs]
path = "../funs"

[dependencies.inger]
path = "../libinger"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "q"
path = "src/q.rs"
