[package]
name = "server"
version = "0.0.0"
edition = "2018"
default-run = "main"

[dependencies.env_logger]
version = "0.8.4"

[dependencies.log]
version = "0.4.14"
features = ["max_level_debug", "release_max_level_warn"]

[dependencies.serde_json]
version = "1.0"

[dependencies.funs]
path = "../funs"

[dependencies.inger]
path = "../libinger"

[dependencies.num_cpus]
version = "1.13.0"

[dependencies.threadpool]
version = "1.8.1"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "q"
path = "src/q.rs"
